--- a/exercicioshtmlcss/exer22/fundo006.html
+++ b/exercicioshtmlcss/exer22/fundo006.html
@@ -10,10 +10,10 @@
 
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
-            
+            background-attachment: fixed;
 background-position: center top;
 background-repeat: no-repeat;
-background size: cover: 
+background size: cover:  
 
 
         }
@@ -31,6 +31,12 @@ background size: cover:
 <body>
     <main>
         <h1>Teste de Imagem</h1>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque laboriosam beatae esse, exercitationem rerum dicta odio totam in fugit amet expedita quia. Nostrum repellat architecto voluptates enim natus corrupti eum?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, quisquam suscipit assumenda quod ipsam incidunt inventore et, laudantium aut nesciunt odit ratione. Quia nulla vero mollitia accusamus architecto quos vel!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis nobis expedita consequatur deserunt exercitationem deleniti, eum nihil et quisquam id ad a, ullam quasi labore. Quaerat dolor itaque et natus.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque laboriosam beatae esse, exercitationem rerum dicta odio totam in fugit amet expedita quia. Nostrum repellat architecto voluptates enim natus corrupti eum?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, quisquam suscipit assumenda quod ipsam incidunt inventore et, laudantium aut nesciunt odit ratione. Quia nulla vero mollitia accusamus architecto quos vel!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis nobis expedita consequatur deserunt exercitationem deleniti, eum nihil et quisquam id ad a, ullam quasi labore. Quaerat dolor itaque et natus.</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque laboriosam beatae esse, exercitationem rerum dicta odio totam in fugit amet expedita quia. Nostrum repellat architecto voluptates enim natus corrupti eum?</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, quisquam suscipit assumenda quod ipsam incidunt inventore et, laudantium aut nesciunt odit ratione. Quia nulla vero mollitia accusamus architecto quos vel!</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis nobis expedita consequatur deserunt exercitationem deleniti, eum nihil et quisquam id ad a, ullam quasi labore. Quaerat dolor itaque et natus.</p>
